[gd_scene load_steps=2 format=3 uid="uid://bwvjb34jslmhh"]

[ext_resource type="Script" path="res://scenes/ui/tela_fim.gd" id="1_v7pbq"]

[node name="TelaVitoria" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_v7pbq")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="LabelTitulo" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Vitória!!"
horizontal_alignment = 1

[node name="LabelTexto" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Você ganhou..."
horizontal_alignment = 1

[node name="BotaoJogarNovamente" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Jogar de novo"

[node name="BotaoSair" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sair do jogo
"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BotaoJogarNovamente" to="." method="_on_botao_jogar_novamente_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BotaoSair" to="." method="_on_botao_sair_pressed"]
